# FPVue_android

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/mavlink/: build.gradle.kts
app/mavlink/src/androidTest/java/com/geehe/mavlink/: ExampleInstrumentedTest.java
app/mavlink/src/main/cpp/: CMakeLists.txt  mavlink.cpp  mavlink.h
app/mavlink/src/main/cpp/mavlink/common/: common.h  mavlink.h  version.h
app/mavlink/src/main/cpp/mavlink/minimal/: mavlink.h  minimal.h  version.h
app/mavlink/src/main/cpp/mavlink/standard/: mavlink.h  standard.h  version.h
app/mavlink/src/main/java/com/geehe/mavlink/: MavlinkData.java  MavlinkNative.java  MavlinkUpdate.java
app/mavlink/src/test/java/com/geehe/mavlink/: ExampleUnitTest.java
app/src/androidTest/java/com/geehe/fpvue/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/geehe/fpvue/: DeviceFilterXmlParser.java  PopUpSettings.java  SettingsChanged.java  UsbDeviceFilter.java  UsbManager.java  VideoActivity.java  WfbLinkManager.java
app/src/main/java/com/geehe/fpvue/osd/: ControlOSDItemAdapter.java  MovableLayout.java  OSDElement.java  OSDManager.java
app/src/main/java/me/saket/cascade/: CascadePopupMenuCheckable.kt
app/src/main/res/drawable/: baseline_battery_0_bar_24.xml  baseline_battery_1_bar_24.xml  baseline_battery_2_bar_24.xml  baseline_battery_3_bar_24.xml  baseline_battery_4_bar_24.xml  baseline_battery_5_bar_24.xml  baseline_battery_6_bar_24.xml  baseline_battery_charging_full_24.xml  baseline_battery_full_24.xml  baseline_fiber_manual_record_24.xml  baseline_import_export_24.xml  baseline_personal_video_24.xml  round_bg.xml
app/src/main/res/layout/: activity_video.xml  list_item_with_checkbox.xml  settings.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/com/geehe/fpvue/: ExampleUnitTest.java
app/video/: build.gradle.kts
app/video/src/androidTest/java/com/geehe/video/: ExampleInstrumentedTest.java
app/video/src/main/cpp/: CMakeLists.txt  video.cpp
app/video/src/main/cpp/moonlight/: Connection.c  FakeCallbacks.c  Limelight-internal.h  Limelight.h  callbacks.c
app/video/src/main/java/com/geehe/video/: CrashListener.java  GlPreferences.java  LimeLog.java  MediaCodecDecoderRenderer.java  MediaCodecHelper.java  MoonBridge.java  PerfOverlayListener.java  PreferenceConfiguration.java  VideoDecoderRenderer.java  VideoStats.java
app/video/src/test/java/com/geehe/video/: ExampleUnitTest.java
app/videonative/: build.gradle.kts
app/videonative/src/androidTest/java/com/geehe/videonative/: ExampleInstrumentedTest.java
app/videonative/src/main/cpp/: AndroidThreadPrioValues.hpp  CMakeLists.txt  UdpReceiver.cpp  UdpReceiver.h  VideoDecoder.cpp  VideoDecoder.h  VideoPlayer.cpp  VideoPlayer.h  minimp4.h  time_util.h
app/videonative/src/main/cpp/NALU/: H26X.hpp  KeyFrameFinder.hpp  NALU.hpp  NALUnitType.hpp
app/videonative/src/main/cpp/helper/: AndroidMediaFormatHelper.h  NDKHelper.hpp  NDKThreadHelper.hpp  StringHelper.hpp  TimeHelper.hpp
app/videonative/src/main/cpp/parser/: H26XParser.cpp  H26XParser.h  ParseRTP.cpp  RTP.hpp
app/videonative/src/main/java/com/geehe/videonative/: AspectFrameLayout.java  DecodingInfo.java  ISurfaceTextureAvailable.java  IVideoParamsChanged.java  VideoPlayer.java
app/videonative/src/test/java/com/geehe/videonative/: ExampleUnitTest.java
app/wfbngrtl8812/: build.gradle.kts
app/wfbngrtl8812/src/androidTest/java/com/geehe/wfbngrtl8812/: ExampleInstrumentedTest.java
app/wfbngrtl8812/src/main/cpp/: CMakeLists.txt  RxFrame.cpp  RxFrame.h  WfbngLink.cpp  WfbngLink.hpp
app/wfbngrtl8812/src/main/cpp/libs/armeabi-v7a/: libpcap.so.1
app/wfbngrtl8812/src/main/java/com/geehe/wfbngrtl8812/: WfbNGStats.java  WfbNGStatsChanged.java  WfbNgLink.java
app/wfbngrtl8812/src/test/java/com/geehe/wfbngrtl8812/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
